plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '7.1.2'
}

group 'org.example'
version '1.0'

repositories {
    mavenCentral()
}

compileJava {
    sourceCompatibility = '1.8'
    targetCompatibility = '1.8'
}

mainClassName = 'com.k1ui.Main'

dependencies {
    implementation 'org.processing:core:3.3.7'
    implementation 'com.github.kwhat:jnativehook:2.2.2'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
    implementation 'org.json:json:20220320'
    implementation 'com.google.code.findbugs:jsr305:3.0.2'
    implementation 'commons-io:commons-io:2.11.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
}

test {
    useJUnitPlatform()
}

jar {
    manifest {
        attributes 'Main-Class': mainClassName
    }
}
